# word-predictability-cfa

./: .gitignore  README.md  pyproject.toml  reference-corpus.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
doc/: handoff_code_review.md  ig-pilot-findings.md  plan-for-validating-measures.md  research_notes.md
src/: 0-download-slim-pajama.ipynb  1-spacy-clc-fce.ipynb  1-spacy-slim-pajama.ipynb  1-spacy-the-data.ipynb  1c-collate-slim-pajama.ipynb  2-calculate-predictability-clc-fce.ipynb  2-calculate-predictability-ellipse.ipynb  2-collate-slim-pajama.ipynb  3-calculate-metrics-clc-fce-fixed.py  3-calculate-metrics-clc-fce.ipynb  3-calculate-predictability-ellipse.ipynb  4-calculate-metrics-ellipse.ipynb  predictor.py
src/2-nomological-network/: network-analysis.qmd  ratings-network.qmd
src/3-attribution/: complexity_validation.py  ig_pilot.py  loo_pilot.py  lrp_pilot.py  modernbert_lrp.py  nominal_attribution.py  nominal_ig.py  toefl11_context_routes.py
src/3-vector-transformations/: nmf_features.py  pilot.ipynb  run_pilot.py
src/3-vector-transformations/pilot/: concordance.py  nmf_features.py  run_pilot.py  umap-hdbscan-results.md
src/4-vector-transformations/: concordance.py
src/ch1_network/: network-analysis.qmd
src/essays/: ingest.py  metrics.py  predictability.py
src/features/: __init__.py  cohesion.py  lexical.py  phraseological.py  predictability.py  syntactic.py
src/network-analysis/: network-analysis.qmd
src/pipeline/: 0_download_slim_pajama.py  0_sample_dolma.py  1_preprocess_dolma.py  1_spacy_slim_pajama.py  2_collate_slim_pajama.py  2_verify_dolma.py  3_calculate_predictability.py  3_spacy_dolma.py  4_calculate_metrics.py  4_collate_dolma.py  ingest_essays.py
src/reference_corpus/: 0_sample.py  1_preprocess.py  2_verify.py  3_parse.py  4_collate.py  dolma_config.py  dolma_stream.py
src/sem/: plot-theoretical-models.qmd  test-cfa.qmd
src/util/: __init__.py  collation.py  paths.py  process_docs.py
